[package]
name = "eagre-asn1"
version = "0.2.0"
authors = ["Rahix <h.w.seiler@gmx.de>"]
description = "A asn1 library, currently only supporting DER"
documentation = "https://rahix.github.io/eagre-asn1/"
homepage = "https://github.com/Rahix/eagre-asn1"
repository = "https://github.com/Rahix/eagre-asn1"
readme = "README.md"
keywords = ["asn1", "der", "serialization"]
license = "MIT/Apache-2.0"


[dependencies]
byteorder = "0.4.2"
